// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshots 1`] = `
<div
  className="App"
>
  <div
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <h2>
      Welcome to the Road to learn React
    </h2>
    <p>
      Time now is 
      10:18:44 PM
    </p>
  </div>
  <div
    className="page"
  >
    <div
      className="interactions"
    >
      <form
        onSubmit={[Function]}
      >
        Search for item
         
        <input
          onChange={[Function]}
          type="text"
          value="react"
        />
        <button
          type="submit"
        >
          Search
        </button>
      </form>
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
        More
      </button>
    </div>
    <div
      className="table"
    >
      <div
        className="table-row-header"
      >
        <span
          style={
            Object {
              "width": "40%",
            }
          }
        >
          <strong>
            Title
          </strong>
        </span>
        <span
          style={
            Object {
              "width": "30%",
            }
          }
        >
          <strong>
            Author
          </strong>
        </span>
        <span
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <strong>
            Comments
          </strong>
        </span>
        <span
          style={
            Object {
              "width": "10%",
            }
          }
        >
          <strong>
            Points
          </strong>
        </span>
        <span
          style={
            Object {
              "width": "10%",
            }
          }
        />
      </div>
    </div>
  </div>
   
</div>
`;

exports[`Button snapshots 1`] = `
<button
  className=""
  onClick={[Function]}
  type="button"
>
  Give me more
</button>
`;

exports[`Search snapshots 1`] = `
<form
  onSubmit={[Function]}
>
  Search
   
  <input
    onChange={[Function]}
    type="text"
    value="hi"
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table snapshots 1`] = `
<div
  className="table"
>
  <div
    className="table-row-header"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <button
        className="button-inline button-active"
        onClick={[Function]}
        type="button"
      >
        Title
      </button>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Author
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Comments
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Points
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Archive
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
      >
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
      >
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
